--- a/index.html
+++ b/index.html
@@ -128,10 +128,11 @@
                 <div class="timeline-date">2022</div>
                 <div class="timeline-content">
                     <h3>High School</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Reiciendis voluptas
-                        labore corrupti nulla, repellat iste
-                        assumenda eius aliquam doloremque facere!</p>
+                    <p>"Graduated from high school with a focus on
+                        [your major subjects or extracurricular activities].
+                        Developed foundational skills in [specific areas, e.g.,
+                        science, arts, leadership],
+                        and participated in [notable activities or achievements]"</p>
                 </div>
 
             </div>
@@ -141,10 +142,10 @@
                 <div class="timeline-date">2024</div>
                 <div class="timeline-content">
                     <h3>College</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Reiciendis voluptas
-                        labore corrupti nulla, repellat iste
-                        assumenda eius aliquam doloremque facere!</p>
+                    <p>"Graduated with a focus on [your major/field].
+                        Participated in various projects and activities
+                        that honed skills in [specific areas].
+                        Developed a strong foundation in [relevant subjects or skills]"</p>
                 </div>
 
             </div>
@@ -155,10 +156,11 @@
                 <div class="timeline-date">2024</div>
                 <div class="timeline-content">
                     <h3>Internship</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Reiciendis voluptas
-                        labore corrupti nulla, repellat iste
-                        assumenda eius aliquam doloremque facere!</p>
+                    <p>Assisted in developing web applications,
+                        conducted user testing, and collaborated with senior
+                        developers to implement new features,
+                        gaining hands-on experience in a professional environment</p>
+
                 </div>
 
             </div>
@@ -168,10 +170,9 @@
                 <div class="timeline-date">2024</div>
                 <div class="timeline-content">
                     <h3>Job 0</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Reiciendis voluptas
-                        labore corrupti nulla, repellat iste
-                        assumenda eius aliquam doloremque facere! </p>
+                    <p>"Engineered scalable software solutions, led code reviews,
+                        and optimized application performance
+                        to enhance user experience and system efficiency " </p>
                 </div>
 
             </div>
@@ -185,35 +186,41 @@
             <div class="service-box">
                 <div class="service-info">
                     <h4>UI Design</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. At incidunt alias rerum
-                        eligendi sapiente quod optio dolore </p>
+                    <p>"Crafting intuitive and visually engaging
+                        user interfaces that enhance user experience
+                        and drive interaction. Our designs focus on simplicity,
+                        consistency, and functionality to ensure a
+                        seamless experience across all platforms."</p>
                 </div>
-
             </div>
+
 
             <!-- 2../>? -->
             <div class="service-box">
                 <div class="service-info">
                     <h4>Frontend Development</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. At incidunt alias rerum
-                        eligendi sapiente quod optio dolore </p>
+                    <p>Building responsive and interactive websites
+                        that bring your designs to life. Our development
+                        focuses on clean code, performance optimization,
+                        and cross-browser compatibility to deliver
+                        seamless user experiences across all devices.</p>
                 </div>
-
             </div>
+
 
             <!-- 4../<> -->
 
             <div class="service-box">
                 <div class="service-info">
                     <h4>Testing</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. At incidunt alias rerum
-                        eligendi sapiente quod optio dolore </p>
+                    <p>Ensuring the highest quality of your application
+                        through rigorous testing. We identify and
+                        resolve issues early, focusing on functionality,
+                        usability, and performance to deliver a
+                        flawless user experience.</p>
                 </div>
-
             </div>
+
         </div>
     </section>
     <section class="testmonials" id="testmonials">
@@ -232,12 +239,13 @@
                         <i class='bx bxs-star' id="star"></i>
                         <i class='bx bxs-star' id="star"></i>
                     </div>
-                    <p>"Lorem ipsum dolor, sit amet consectetur
-                        adipisicing elit. Quia, autem rerum unde
-                        debitis incidunt ea quas veniam modi, cum,
-                        odit facere consectetur dolorum quis?
-                        Consequatur rerum ratione eaque excepturi
-                        veritatis!"</p>
+                    <p>"Working with the team was
+                        an exceptional experience.
+                        Their professionalism,
+                        attention to detail,
+                        and dedication to delivering
+                        a high-quality product were evident
+                        throughout the project!"</p>
                 </div>
 
                 <!-- 2../<> -->
@@ -251,12 +259,13 @@
                         <i class='bx bxs-star' id="star"></i>
                         <i class='bx bxs-star' id="star"></i>
                     </div>
-                    <p>"Lorem ipsum dolor, sit amet consectetur
-                        adipisicing elit. Quia, autem rerum unde
-                        debitis incidunt ea quas veniam modi, cum,
-                        odit facere consectetur dolorum quis?
-                        Consequatur rerum ratione eaque excepturi
-                        veritatis!"</p>
+                    <p>"Working with the team was
+                        an exceptional experience.
+                        Their professionalism,
+                        attention to detail,
+                        and dedication to delivering
+                        a high-quality product were evident
+                        throughout the project"</p>
                 </div>
 
                 <!-- 3../<>? -->
@@ -271,12 +280,13 @@
                         <i class='bx bxs-star' id="star"></i>
                         <i class='bx bxs-star' id="star"></i>
                     </div>
-                    <p>"Lorem ipsum dolor, sit amet consectetur
-                        adipisicing elit. Quia, autem rerum unde
-                        debitis incidunt ea quas veniam modi, cum,
-                        odit facere consectetur dolorum quis?
-                        Consequatur rerum ratione eaque excepturi
-                        veritatis!"</p>
+                    <p>"Working with the team was
+                        an exceptional experience.
+                        Their professionalism,
+                        attention to detail,
+                        and dedication to delivering
+                        a high-quality product were evident
+                        throughout the project!"</p>
                 </div>
             </div>
         </div>
@@ -307,7 +317,7 @@
     <footer class="footer">
         <div class="social">
             <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://github.com/hussaindev99?tab=repositories"><i class='bx bxl-github'></i></a>
             <a href="#"><i class='bx bxl-instagram-alt'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
         </div>
