--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Webpage Design</title>
@@ -63,4 +63,4 @@
         
     </script>
 </body>
-</html> -->
+</html>
